--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
     />
     <meta property="og:title" content="Ivy X. He Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
+    <meta property="og:url" content="https://Ivyyyy24381.github.io/" />
     <meta name="description" content="Ivy He's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
-    <meta name="keywords" content="Ashutosh, PortFolio, MasterPortfolio, Ivy He's Portfolio" />
-    <meta name="author" content="Ashutosh" />
-    <meta name="application-name" content="Ashutosh's PortFolio" />
+    <meta name="keywords" content="Ivy He, PortFolio, MasterPortfolio, Ivy He's Portfolio" />
+    <meta name="author" content="Ivy He" />
+    <meta name="application-name" content="Ivy He's PortFolio" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
